--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.11.1",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@types/compression": "^1.8.1",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "compression": "^1.8.0",
     "ioredis": "^5.6.1",
     "nestjs-i18n": "^10.5.1",
     "passport": "^0.7.0",
