feat: enhance application performance and security with Fastify and additional dependencies
- Integrated Fastify as the HTTP adapter for improved performance and optimized request handling.
- Added new dependencies: `@fastify/compress`, `@fastify/helmet`, and `@fastify/static` for enhanced response compression, security headers, and static file serving.
- Updated the application configuration to utilize Fastify's features, including optimized body parsing and CORS settings.
- Refactored the Redis service to include performance optimizations and better error handling.
- Enhanced validation and error handling in the authentication module for improved user feedback and internationalization support.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@fastify/compress": "^8.1.0",
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/static": "^8.2.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -35,6 +38,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-fastify": "^11.1.4",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.11.1",
     "@prisma/extension-accelerate": "^2.0.2",
