--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,8 @@ variables:
 
 notify_on_merge_request:
   stage: deploy
-  tags:
-    - stage
+  # tags:
+  #   - stage
   image: busybox:latest
   script:
     - >
