feat: add release job to GitLab CI configuration
- Introduced a new `release` job in the `.gitlab-ci.yml` file to automate the release process.
- Configured the job to run on the `main` branch using Node.js, with commands for installing dependencies and executing semantic release.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,19 @@ variables:
   PARSE_MODE: "Markdown"
 
 
+release:
+  stage: release
+  image: node:latest
+  tags:
+    - production
+  script:
+    - npm ci
+    - npx semantic-release
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "main"'
+      when: on_success
+
+
 notify_on_merge_request:
   stage: deploy
   # tags:
