chore: comment out tags in release job of GitLab CI configuration
- Removed the `tags` section from the `release` job in the `.gitlab-ci.yml` file to streamline the configuration.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,11 @@ variables:
   MESSAGE_THREAD_ID: "$MESSAGE_THREAD_ID"
   PARSE_MODE: "Markdown"
 
-
 release:
   stage: release
   image: node:latest
-  tags:
-    - production
+  # tags:
+  #   - production
   script:
     - npm ci
     - npx semantic-release
