chore: add Node.js and npm version checks in release job of GitLab CI configuration
- Included commands to output the Node.js and npm versions in the `release` job of the `.gitlab-ci.yml` file for better visibility and debugging during the CI process.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,12 +17,13 @@ release:
   # tags:
   #   - production
   script:
+    - node -v
+    - npm -v
     - npm ci
     - npx semantic-release
   rules:
     - if: '$CI_COMMIT_BRANCH == "main"'
       when: on_success
-
 
 notify_on_merge_request:
   stage: deploy
