chore: update GitLab CI configuration and add semantic release support
- Changed the Node.js image in the `release` job from `node:20-alpine` to `node:20-bullseye` for better compatibility.
- Updated the `notify_on_merge_request` job image from `curlimages/curl:latest` to `busybox:latest`.
- Added a `release` script to `package.json` for semantic release automation.
- Included new dependencies for semantic release in `package.json` and `pnpm-lock.yaml`.
- Modified the `release.config.cjs` to configure semantic release plugins and commands for changelog generation and GitLab integration.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,9 @@ variables:
 
 release:
   stage: release
-  image: node:20-alpine
+  image: node:20-bullseye
+  # tags:
+  #   - production
   script:
     - node -v
     - npm -v
@@ -25,7 +27,9 @@ release:
 
 notify_on_merge_request:
   stage: deploy
-  image: curlimages/curl:latest
+  # tags:
+  #   - stage
+  image: busybox:latest
   script:
     - >
       LINE1="⏳ *New Merge Request*"
