--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:seed": "ts-node prisma/seed.ts"
+    "prisma:seed": "ts-node prisma/seed.ts",
+    "release": "semantic-release"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -61,6 +62,12 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/exec": "^7.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/gitlab": "^13.2.6",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.8",
     "@types/bcrypt": "^5.0.2",
@@ -75,6 +82,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "prisma": "^6.11.1",
+    "semantic-release": "^24.2.7",
+    "semantic-release-preconfigured-conventional-commits": "^1.1.138",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
