chore: enhance release job in GitLab CI configuration
- Added corepack and pnpm setup commands to the `release` job for improved dependency management.
- Replaced npm commands with pnpm commands to streamline the installation and release process.
- Included a command to output the pnpm version for better visibility during CI execution.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,10 +17,12 @@ release:
   # tags:
   #   - production
   script:
+    - corepack enable
+    - corepack prepare pnpm@10.11.1 --activate
+    - pnpm --version
     - node -v
-    - npm -v
-    - npm ci
-    - npx semantic-release
+    - pnpm install --frozen-lockfile
+    - pnpm run release
   rules:
     - if: '$CI_COMMIT_BRANCH == "main"'
       when: on_success
