chore: comment out tags in notify_on_merge_request job for cleaner configuration
- Commented out the `tags` section in the `notify_on_merge_request` job of the `.gitlab-ci.yml` file to enhance readability and maintain a cleaner configuration.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,8 @@ release:
 
 notify_on_merge_request:
   stage: deploy
-  tags:
-    - stage
+  # tags:
+  #   - stage
   image: busybox:latest
   script:
     - >
