feat: implement language and upload management features
- Added Language module with CRUD operations for managing languages, including validation and pagination.
- Introduced Upload module for handling file uploads, including validation for file types and sizes.
- Enhanced Prisma service with pagination support for querying languages.
- Updated global exception handling to manage validation errors more effectively.
- Added new DTOs for language creation, updating, and response formatting.
- Integrated file upload functionality with error handling and storage management.
- Updated Swagger documentation for new endpoints and improved API responses.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,16 +11,16 @@ variables:
   MESSAGE_THREAD_ID: "$MESSAGE_THREAD_ID"
   PARSE_MODE: "Markdown"
 
-release:
-  stage: release
-  image: node:20-alpine
-  # tags:
-  #   - production
-  script:
-    - npx semantic-release
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main"'
-      when: on_success
+# release:
+#   stage: release
+#   image: node:20-alpine
+#   # tags:
+#   #   - production
+#   script:
+#     - npx semantic-release
+#   rules:
+#     - if: '$CI_COMMIT_BRANCH == "main"'
+#       when: on_success
 
 notify_on_merge_request:
   stage: deploy
