feat: enhance language and upload management with new validators and configurations
- Added `IsUnique` validator for checking unique language entries in the database.
- Updated `LanguageService` to include checks for existing languages during creation and updates.
- Introduced `UploadTypeEnum` for better type safety in file uploads.
- Enhanced `UploadFileDto` to enforce enum validation for upload types.
- Improved global exception handling to log errors more effectively.
- Updated `I18nConfig` to set default locale values.
- Refactored `AppModule` and added new enums and validators for better organization and maintainability.

--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "nestjs-i18n": "^10.5.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.25",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
