--- a/package.json
+++ b/package.json
@@ -18,17 +18,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:seed": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register prisma/seed.ts",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
-    "prisma:push": "prisma db push",
-    "prisma:pull": "prisma db pull",
-    "prisma:reset": "prisma migrate reset",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- migration:generate -d src/databases/typeorm/data-source.ts",
+    "migration:run": "npm run typeorm -- migration:run -d src/databases/typeorm/data-source.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/databases/typeorm/data-source.ts",
+    "seed": "ts-node -r tsconfig-paths/register src/databases/typeorm/seeds/seed.ts",
     "release": "semantic-release"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
   },
   "engines": {
     "npm": ">=10.0.0",
@@ -48,17 +43,16 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-fastify": "^11.1.5",
     "@nestjs/swagger": "^11.2.0",
-    "@prisma/client": "^6.11.1",
-    "@prisma/extension-accelerate": "^2.0.2",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.6.1",
+    "mysql2": "^3.9.2",
     "nestjs-i18n": "^10.5.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25",
@@ -70,12 +64,6 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/exec": "^7.1.0",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/gitlab": "^13.2.6",
-    "@semantic-release/release-notes-generator": "^14.0.3",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.8",
     "@types/bcrypt": "^5.0.2",
@@ -89,9 +77,6 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.11.1",
-    "semantic-release": "^24.2.7",
-    "semantic-release-preconfigured-conventional-commits": "^1.1.138",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
@@ -124,5 +109,5 @@
       "@swc/core"
     ]
   },
-  "packageManager": "pnpm@10.11.1+sha512.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912"
+  "packageManager": "pnpm@10.11.1+sha256.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912"
 }
