--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       PMA_PORT: 3306
       PMA_USER: ${DB_USERNAME}
       PMA_PASSWORD: ${DB_PASSWORD}
+      PMA_ARBITRARY: 1
+      UPLOAD_LIMIT: 100000000
     ports:
       - "8081:80"
     networks:
