--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@swc/core": "^1.10.8",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "cross-env": "^7.0.3",
