--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - mysql_data:/var/lib/mysql
     networks:
       - kitob_uz_network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -32,6 +37,11 @@ services:
       - "8081:80"
     networks:
       - kitob_uz_network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   redis:
     image: redis:latest
@@ -46,6 +56,11 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     networks:
       - kitob_uz_network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   mysql_data:
