feat: add Docker support and optimize application build process
- Introduced Docker configuration in docker-compose.yml for the application, enabling easy deployment and management.
- Added a Dockerfile to streamline the build process for the application, including multi-stage builds for optimized production images.
- Updated package.json to reflect changes in dependencies, including a downgrade of the Redis package for compatibility.
- Removed caching configuration from TypeORM data source to simplify setup and improve maintainability.
- Enhanced package-lock.json with updated dependencies for better performance and security.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: kitob_uz_app
+    restart: always
+    ports:
+      - "3000:3000"
+    networks:
+      - kitob_uz_network
+    depends_on:
+      - mysql
+      - redis
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
   mysql:
     image: mysql:8.4
     container_name: kitob_uz_mysql
