feat: add Docker Compose configuration and update dependencies
- Introduced a new `docker-compose.yml` file to manage application services including app, MySQL, Redis, and phpMyAdmin.
- Updated `package.json` to replace `@nestjs/platform-express` with `@nestjs/platform-fastify` and added `@nestjs/typeorm` and `typeorm` dependencies.
- Created a new `pnpm-lock.yaml` file to manage package dependencies with pnpm.
- Modified `main.ts` to use Fastify adapter for the Nest application.
- Updated TypeORM configuration to use the correct database environment variable.

--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/common": "^11.0.17",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-fastify": "^11.1.6",
+    "@nestjs/typeorm": "^11.0.0",
     "ioredis": "^5.6.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -81,5 +83,6 @@
       "@nestjs/core",
       "@swc/core"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
